Improvements in notebook configuration, stability and performance
- Addressed review comments
- Fixed some labels
- Improvements to NotebookUtils for conversions between line-based positions and string offsets
    - Avoiding unnecessary string split and joins
    - Added unit tests
- Notebook configurations related changes
    1. Made classpath,modulepath and add modules configs as array type on frontend
    2. Corresponding changes on backend to process the array
    3. Updated notebook configs unit tests
- Add enable-preview flag from the project context if not configured
- Addressed minor gaps in notebook cell execution
    - Correctly printing the runtime errors stacktrace
    - Handling null output stream callback
    - Performing lineEnding normalization only where required in cell setContent.
    - Minor performance improvements

Co-authored-by: Achal Talati <achal.talati@oracle.com>
Co-authored-by: Shivam Madan <shivam.madan@oracle.com>
Co-authored-by: Siddharth Srinivasan <siddharth.srinivasan@oracle.com>